--- a/assets/css/style-tabela.css
+++ b/assets/css/style-tabela.css
@@ -132,3 +132,19 @@ table {
     text-align: center;
     margin-left: 55%;
 }
+
+select {
+    width: 30%;
+    height: 25px;
+    display: flex;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+#div-th {
+    /* border: 1px solid #ccc; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
