--- a/assets/css/style-tabela.css
+++ b/assets/css/style-tabela.css
@@ -38,7 +38,7 @@ input#criar,
     box-sizing: border-box;
 }
 
-div#divNomeTabela, div#divCabecalhoTabela {
+div#divNomeTabela, div#divCabecalhoTabela, #inputBancoDados {
     margin: 10px;
     height: 26px;
     width: 15%;
@@ -146,5 +146,19 @@ select {
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+#tituloTabela {
+    /* border: 1px solid #ccc; */
+    display: flex;
+}
+
+#divBancoDados {
+    margin-top: 17px;
+    width: 100%;
+    display: flex;
+    height: 26px;
+    justify-content: right;
+    /* border: 1px solid #ccc; */
 }
 
