--- a/assets/css/style-tabela.css
+++ b/assets/css/style-tabela.css
@@ -29,7 +29,8 @@ header input,
 #confirmar,
 #exemplo,
 input#criar,
-#adicionar {
+#adicionar,
+#button-sql {
     margin: 10px;
     height: 25px;
     width: 15%;
@@ -131,7 +132,23 @@ table {
 #button-sql {
     text-align: center;
     margin-left: 55%;
+    margin-top: -1px;
+    margin-right: -1px;
 }
+
+#button-sql:hover {
+    background-color: #0275D8;
+    color: white;
+}
+
+#divsql input {
+    width: 100%;
+    height: 25px;
+    display: flex;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
 
 select {
     width: 30%;
