--- a/assets/css/style-tabela.css
+++ b/assets/css/style-tabela.css
@@ -81,11 +81,6 @@ table {
     box-sizing: border-box;
 }
 
-#tabelaExemplo {
-    background-color: #e6e941;
-    color: #000000;
-}
-
 #menu {
     display: flex;
     justify-content: flex-start;
@@ -134,6 +129,18 @@ table {
     margin-left: 55%;
     margin-top: -1px;
     margin-right: -1px;
+}
+
+#deletarBD {
+    margin-top: 10px;
+    margin-bottom: -10px;
+    border: 1px solid #ccc;
+    color: #ccc;
+}
+
+#deletarBD:hover {
+    background-color: #d9534f;
+    color: #ccc;
 }
 
 #criar:hover,
