--- a/assets/css/style-tabela.css
+++ b/assets/css/style-tabela.css
@@ -210,7 +210,7 @@ select {
 #prompt-CMD {
     margin-top: 20px;
     border: 5px solid #292524;
-    height: 100px;
+    /* height: 100px; */
     background-color: #12100C;
 }
 
