--- a/assets/css/style-tabela.css
+++ b/assets/css/style-tabela.css
@@ -201,7 +201,7 @@ select {
     /* border: 1px solid #ccc; */
 }
 
-#divThs {
+.divThs {
     /* border: 1px solid #ccc; */
     width: 2%;
     height: 15px;
