--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -82,7 +82,7 @@ a {
 }
 
 #menuSite:hover {
-    background: #F6FAFF;
+    background: linear-gradient(to left, #F6FAFF, #F6FAFF);
     width: 130px;
     height: 100%;
     transition: 0.7s;
@@ -130,7 +130,7 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 95%;
     height: 100%;
     border: 0;
     
