--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -116,7 +116,7 @@ a {
     margin-right: 50px;
     padding: 20px;
     color: #292B2C;
-    border: 1px solid #DEE2E6;
+    /* border: 1px solid #DEE2E6; */
 }
 
 #formSection {
